# camserver

./: Cargo.toml  Dockerfile
.cargo/: config.toml
src/: http.rs  image.rs  main.rs  mqtt.rs  state.rs  stream.rs  utils.rs
static/css/: main.css
static/js/: main.js
