[package]
name = "camserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
maud = { version = "*", features = ["actix-web"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
env_logger = "0.11.5"
rumqttc = "0.24.0"
tokio = "1.44.1"
regex = "1.11.1"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.15", default-features = false }
futures-core = "0.3.31"
async-stream = "0.3.6"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[patch.crates-io]
actix-web = { git = "https://github.com/ngrondin/actix-web.git" }
actix-http = { git = "https://github.com/ngrondin/actix-web.git" }
actix-files = { git = "https://github.com/ngrondin/actix-web.git" }